--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -1,6 +1,9 @@
 %%%%%%% units
 \newcommand{\kg}{\ensuremath{\mbox{kg}}\xspace}
 \newcommand{\eV}{\ensuremath{\mbox{e\kern-0.1em V}}\xspace}
+\newcommand{\EeV}{\ensuremath{\mbox{Ee\kern-0.1em V}}\xspace}
+\newcommand{\TeV}{\ensuremath{\mbox{Te\kern-0.1em V}}\xspace}
+\newcommand{\PeV}{\ensuremath{\mbox{Pe\kern-0.1em V}}\xspace}
 \newcommand{\GeV}{\ensuremath{\mbox{Ge\kern-0.1em V}}\xspace}
 \newcommand{\MeV}{\ensuremath{\mbox{Me\kern-0.1em V}}\xspace}
 \newcommand{\GeVc}{\ensuremath{\mbox{Ge\kern-0.1em V}\kern-0.1em/\kern-0.05em c}\xspace}
@@ -81,7 +84,12 @@
 
 \newcommand{\E}[1]{$10^{#1}$ \eV\xspace}
 
+
 \def \nmu{$N_{\mu}$\xspace}
+\def \xmax{$X_\text{max}$\xspace}
+\def \xmumax{$X^\mu_\text{max}$\xspace}
+
+
 \def \pions{$\pi^\pm$\xspace}
 \def \kaons{K$^\pm$\xspace}
 \def \proton{p\xspace}
@@ -94,7 +102,6 @@
 \def \pipi{$\pi^+\pi^-$\xspace}
 \def \vzero{$V^0$\xspace}
 \def \vzeros{$V^0$'s\xspace}
-\def \minv{$m_\text{inv}$\xspace}
 
 
 \newcommand{\eps}{\ensuremath{\mbox{$\varepsilon$}}\xspace}
