--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,86 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{Espadanal:2016jse,
+      author         = "Espadanal, J. and Cazon, L. and Conceição, R.",
+      title          = "{Sensitivity of EAS measurements to the energy spectrum
+                        of muons}",
+      journal        = "Astropart. Phys.",
+      volume         = "86",
+      year           = "2017",
+      pages          = "32-40",
+      doi            = "10.1016/j.astropartphys.2016.11.003",
+      eprint         = "1607.06760",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1607.06760;%%"
+}
+
+@article{Pierog:2017nes,
+      author         = "Pierog, Tanguy",
+      title          = "{Open issues in hadronic interactions for air showers}",
+      booktitle      = "{Proceedings, 19th International Symposium on Very High
+                        Energy Cosmic Ray Interactions (ISVHECRI 2016): Moscow,
+                        Russia, August 22-27, 2016}",
+      journal        = "EPJ Web Conf.",
+      volume         = "145",
+      year           = "2017",
+      pages          = "18002",
+      doi            = "10.1051/epjconf/201614518002",
+      SLACcitation   = "%%CITATION = 00776,145,18002;%%"
+}
+
+@article{Meurer:2005dt,
+      author         = "Meurer, Christine and Bluemer, J. and Engel, R. and
+                        Haungs, A. and Roth, M.",
+      title          = "{Muon production in extensive air showers and its
+                        relation to hadronic interactions}",
+      booktitle      = "{From colliders to cosmic rays. Proceedings,
+                        International Conference on interconnection between high
+                        energy physics and astroparticle physics, C2CR-Prague'05,
+                        Prague, Czech Republic, September 7-13, 2005}",
+      journal        = "Czech. J. Phys.",
+      volume         = "56",
+      year           = "2006",
+      pages          = "A211",
+      doi            = "10.1007/s10582-006-0156-9",
+      eprint         = "astro-ph/0512536",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0512536;%%"
+}
+
+@article{Knapp:2002vs,
+      author         = "Knapp, J. and Heck, D. and Sciutto, S. J. and Dova, M. T.
+                        and Risse, M.",
+      title          = "{Extensive air shower simulations at the highest
+                        energies}",
+      journal        = "Astropart. Phys.",
+      volume         = "19",
+      year           = "2003",
+      pages          = "77-99",
+      doi            = "10.1016/S0927-6505(02)00187-1",
+      eprint         = "astro-ph/0206414",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0206414;%%"
+}
+
+@article{Pierog:2013dya,
+      author         = "Pierog, T.",
+      title          = "{Connecting accelerator experiments and cosmic ray
+                        showers}",
+      booktitle      = "{Proceedings,  International Symposium on Future
+                        Directions in UHECR Physics (UHECR2012): CERN, Geneva,
+                        Switzerland, February 13-16, 2012}",
+      journal        = "EPJ Web Conf.",
+      volume         = "53",
+      year           = "2013",
+      pages          = "01004",
+      doi            = "10.1051/epjconf/20135301004",
+      SLACcitation   = "%%CITATION = 00776,53,01004;%%"
+}
+
 @article{Prado:2016akv,
       author         = "Prado, Raul R. and Conceição, Ruben and Pimenta, Mário
                         and de Souza, Vitor",
