--- a/showers.tex
+++ b/showers.tex
@@ -2,10 +2,24 @@
 \label{sec:showers}
 
 
-\section{Particle production}
+\section{EM component and the \xmax}
 
+\section{Hadronic component and the \nmu}
+
+
+\cite{Pierog:2013dya,Knapp:2002vs,Meurer:2005dt,Pierog:2017nes,Espadanal:2016jse}
+
+average pt against spectra of muons at the ground
 
 \section{Observables}
+
+
+\subsection{\xmax}
+
+\subsection{\nmu}
+
+
+\subsection{\xmumax}
 
 
 
