--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,17 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{Brun:1994aa,
+      author         = "Brun, René and Bruyant, F. and Carminati, Federico and
+                        Giani, Simone and Maire, M. and McPherson, A. and Patrick,
+                        G. and Urban, L.",
+      title          = "{GEANT Detector Description and Simulation Tool}",
+      doi            = "10.17181/CERN.MUHF.DMJ1",
+      year           = "1994",
+      reportNumber   = "CERN-W5013, CERN-W-5013, W5013, W-5013",
+      SLACcitation   = "%%CITATION = CERN-W5013;%%"
+}
+
 @article{Espadanal:2016jse,
       author         = "Espadanal, J. and Cazon, L. and Conceição, R.",
       title          = "{Sensitivity of EAS measurements to the energy spectrum
@@ -511,7 +522,7 @@
   title        = "{Baryon Momentum Transfer in Hadronicand Nucear Collisions
 at the CERN NA49 Experiment}",
   school       = "Department of Atomic Physics, Eotvos Lorand University",
-  year         = 2001,
+  year         = "2001"
   address      = "Budapest"
 }
 
@@ -520,6 +531,14 @@ at the CERN NA49 Experiment}",
   title        = "{$\phi$ meson production in proton-proton collisions
 in the NA61/SHINE experiment at CERN SPS}",
   school       = "Institute of Physics, Jagiellonian University",
-  year         = 2016,
+  year         = "2016"
   address      = "Krak\'ow"
+}
+
+@phdthesis{MartinThesis,
+  author       = "Ruprecht, M.", 
+  title        = "{Measurements of the Spectrum of Charged Hadrons in $\pi^-$+C Interactions with the \NASixtyOne Experiment}",
+  school       = "Institute of Experimental Particle Physics, Karlsruhe Institute of Technology",
+  year         = "2012"
+  address      = "Karlsruhe"
 }
