--- a/main.tex
+++ b/main.tex
@@ -101,6 +101,9 @@
 \crefname{equation}{Eq.}{Eqs.}
 \crefname{item}{item}{items}
 \usepackage{xspace}
+%\usepackage{enumerate}
+\usepackage{enumitem}
+\usepackage{amsmath}
 
 \include{abbreviations}
 
