--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -117,7 +117,7 @@
 \newcommand{\ich}{\ensuremath{j}\xspace}
 \newcommand{\ieps}{\ensuremath{k}\xspace}
 \newcommand{\neps}{\ensuremath{K}\xspace}
-%\newcommand{\p}{\ensuremath{p}\xspace}
+\newcommand{\pp}{\ensuremath{p}\xspace}
 \newcommand{\iz}{\ensuremath{l}\xspace}
 \newcommand{\iq}{\ensuremath{m}\xspace}
 \newcommand{\gen}{\text{gen}\xspace}
