--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,22 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{Alt:2005zq,
+      author         = "Alt, C. and others",
+      title          = "{Inclusive production of charged pions in p+p collisions
+                        at 158-GeV/c beam momentum}",
+      collaboration  = "NA49",
+      journal        = "Eur. Phys. J.",
+      volume         = "C45",
+      year           = "2006",
+      pages          = "343-381",
+      doi            = "10.1140/epjc/s2005-02391-9",
+      eprint         = "hep-ex/0510009",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = HEP-EX/0510009;%%"
+}
+
 @article{Brun:1994aa,
       author         = "Brun, René and Bruyant, F. and Carminati, Federico and
                         Giani, Simone and Maire, M. and McPherson, A. and Patrick,
@@ -542,3 +558,27 @@ in the NA61/SHINE experiment at CERN SPS}",
   year         = "2012"
   address      = "Karlsruhe"
 }
+
+@phdthesis{LeeuwenThesis,
+  author       = "van~Leeuwen, M.", 
+  title        = "{Kaon and open charm production in central lead-lead
+collisions at the CERN SPS}",
+  school       = "NIKHEF",
+  year         = "2003"
+  address      = "Amsterdam"
+}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%% BOOKS  %%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%
+
+@book{BlumBook,
+  author       = "Blum, W. and Riegler, W. and Rolandi, L.", 
+  title        = "{Particle Detection with Drift Chambers}",
+  publisher    = "Springer",
+  year         = "2008"
+  address      = "",
+  isbn         = "978-3-540-76683-4"
+}
+
